--- a/WIFI/WIFI.ioc
+++ b/WIFI/WIFI.ioc
@@ -20,8 +20,13 @@ Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
 Mcu.Pin10=PA13
 Mcu.Pin11=PA14
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin12=PB5
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=PB8
+Mcu.Pin16=PB9
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
@@ -30,7 +35,7 @@ Mcu.Pin6=PB10
 Mcu.Pin7=PB11
 Mcu.Pin8=PA9
 Mcu.Pin9=PA10
-Mcu.PinsNb=14
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -75,6 +80,26 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=OLED_SDA
 PB11.Locked=true
 PB11.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=CS_OLED
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=DC_OLED
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=RES_OLED
+PB7.Locked=true
+PB7.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=SDA_OLED
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=SCL_OLED
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=LED
 PC13-TAMPER-RTC.Locked=true
